--- a/res/layout/activity_startnewfeed.xml
+++ b/res/layout/activity_startnewfeed.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold"
         android:padding="15dp"
         android:singleLine="true"
-    android:text="Beat Box relies on strong internet connection"
+    android:text="Music Box relies on strong internet connection"
      />
     
 
