--- a/res/layout/activity_more.xml
+++ b/res/layout/activity_more.xml
@@ -65,16 +65,13 @@
         android:background="#666666" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/line"
         android:padding="10dp"
         android:singleLine="true"
         android:text="Email admin@pilestudios.com with concerns and suggestions" 
-        
-                android:scrollHorizontally="true"
-          android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
+    
         
         />
 
